--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,39 @@
-btn {
-  background: blue;
-  color: silver;
+.timer {
+  background: lightgoldenrodyellow;
+  padding: 5px;
+  border: 2px solid gold;
+}
+#quiz {
+  background: lightgoldenrodyellow;
+  border: 2px solid gold;
+}
+body {
+  background-image: url("../images/rapmural.jpg");
+  background-repeat: repeat;
+}
+#results {
+  background: lightgoldenrodyellow;
+  border: 2px solid gold;
+}
+
+.hide {
+  display: none;
+}
+
+.jumbotron {
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
+
+.btn {
+  font-size: 200%;
+  font-weight: 500;
+  background-color: goldenrod;
+  height: 10%;
+  width: 25%;
+}
+
+#results {
+  font-size: 200%;
+  font-weight: 500;
 }
