--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,8 +29,7 @@ body {
   font-size: 200%;
   font-weight: 500;
   background-color: goldenrod;
-  height: 10%;
-  width: 25%;
+  padding: auto;
 }
 
 #results {
